database/pgAdmin/manifests/pgadmin.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #  PG Admin doesn't like oauth2 proxy
  name: pgadmin4
spec:
  ingressClassName: nginx
  rules:
  - host: pgadmin.microspray.io
    http:
      paths:
      - backend:
          service:
            name: pgadmin
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - 'pgadmin.microspray.io'
    secretName: microspray.io-certs
